--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -5,6 +5,17 @@
     align-items: center;
     flex-direction: column;
     background-color: var(--gray-900);
+    .img,
+    .imgSignup {
+        width: 350px;
+        height: auto;
+        border-radius: 4px;
+        filter: contrast(3) brightness(1);
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    }
+    .imgSignup {
+        margin-bottom: -20px;
+    }
 }
 
 .login {
@@ -15,6 +26,10 @@
     justify-content: center;
     flex-direction: column;
     padding: 2rem 1.5rem;
+    h1 {
+        color: var(--white);
+        padding-bottom: 1rem;
+    }
     form {
         width: 90%;
         display: flex;
