--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -8,6 +8,7 @@
 :root {
     --white: #FFF;
     --black: #000;
+    --cinza: #DDD;
     --dark-900: #101026;
     --dark-700: #1D1D2E;
     --gray-100: #8A8A8A;
